Refactor ProductServiceImpl: enhance save method and improve findAll implementation with proper assertions in tests