@@ -7,18 +7,17 @@ import com.example.store.product.domain.ProductImage;
 import com.example.store.product.domain.ProductRepository;
 import com.example.store.search.infrastructure.repository.implementation.SearchProductRepository;
 import com.example.store.util.FileUploadUtil;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,11 +26,9 @@ import static org.junit.jupiter.api.Assertions.*;
 public class ProductServiceTest {
 
     @Mock
-    @Qualifier("postgresProductRepository")
     private ProductRepository queryProductRepository;
 
     @Mock
-    @Qualifier("redisProductRepository")
     private ProductRepository cacheProductRepository;
 
     @Mock
@@ -46,48 +43,73 @@ public class ProductServiceTest {
     @InjectMocks
     private ProductServiceImpl productService;
 
-    public MultipartFile MULTIPART_FILE_PREPARED = new MockMultipartFile("test.jpg","test.jpg".getBytes(StandardCharsets.UTF_8));
-
-    public Product PRODUCT_BASE_PREPARED = Product.builder()
-            .id(null)
-            .name("Product 1")
-            .description("Description 1")
-            .price(100.0)
-            .stock(10)
-            .category(Category.builder().name("Category 1").build())
-            .productImage(null)
-            .build();
-
-    public Product PRODUCT_SAVED_PREPARED = Product.builder()
-            .id(1L)
-            .name("Product 1")
-            .description("Description 1")
-            .price(100.0)
-            .stock(10)
-            .category(Category.builder().id(1L).name("Category 1").build())
-            .productImage(ProductImage.builder().id(1L).url("api/v1/products/images/test.jpg").build())
-            .build();
+    @BeforeEach
+    void setUp() {
+        productService = new ProductServiceImpl(
+                queryProductRepository,
+                cacheProductRepository,
+                categoryRepository,
+                searchProductRepository,
+                fileUploadUtil
+        );
+    }
 
     @Test
     void save() {
+        MultipartFile MULTIPART_FILE_PREPARED = new MockMultipartFile("test.jpg","test.jpg".getBytes(StandardCharsets.UTF_8));
+
+        Product PRODUCT_BASE_PREPARED = Product.builder()
+                .id(null)
+                .name("Product 1")
+                .description("Description 1")
+                .price(100.0)
+                .stock(10)
+                .category(Category.builder().name("Category 1").build())
+                .productImage(null)
+                .build();
+
+        Product PRODUCT_SAVED_PREPARED = Product.builder()
+                .id(1L)
+                .name("Product 1")
+                .description("Description 1")
+                .price(100.0)
+                .stock(10)
+                .category(Category.builder().id(1L).name("Category 1").build())
+                .productImage(ProductImage.builder().id(1L).url("api/v1/products/images/test.jpg").build())
+                .build();
+
         Mockito.when(categoryRepository.save(PRODUCT_BASE_PREPARED.getCategory())).thenReturn(Category.builder().id(1L).name(PRODUCT_BASE_PREPARED.getCategory().getName()).build());
         Mockito.when(fileUploadUtil.uploadFile("/images",MULTIPART_FILE_PREPARED)).thenReturn("test.jpg");
         Mockito.when(queryProductRepository.save(PRODUCT_BASE_PREPARED)).thenReturn(PRODUCT_SAVED_PREPARED);
 
-
         Product product = productService.save(PRODUCT_BASE_PREPARED, MULTIPART_FILE_PREPARED);
 
         assertNotNull(product);
-        assertEquals(product, PRODUCT_SAVED_PREPARED);
+        assertNotNull(product.getId());
+        assertEquals("Product 1", product.getName());
+        assertEquals("Description 1", product.getDescription());
+        assertEquals(100.0, product.getPrice());
+        assertEquals(10, product.getStock());
+        assertEquals(1L, product.getCategory().getId());
+        assertEquals("api/v1/products/images/test.jpg", product.getProductImage().getUrl());
     }
 
     @Test
     void findAll(){
-        Mockito.when(queryProductRepository.findAll()).thenReturn(Arrays.asList(PRODUCT_SAVED_PREPARED));
+        Product PRODUCT_SAVED_PREPARED = Product.builder()
+                .id(1L)
+                .name("Product 1")
+                .description("Description 1")
+                .price(100.0)
+                .stock(10)
+                .category(Category.builder().id(1L).name("Category 1").build())
+                .productImage(ProductImage.builder().id(1L).url("api/v1/products/images/test.jpg").build())
+                .build();
+
+        Mockito.when(cacheProductRepository.findAll()).thenReturn(List.of(PRODUCT_SAVED_PREPARED));
 
         List<Product> products = productService.findAll();
-
-        assertNotNull(products);
         assertEquals(1, products.size());
+        assertNotNull(products);
     }
 }
